<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.mphasis.interview</groupId>
	<artifactId>java-interview-test</artifactId>
	<version>0.0.1-SNAPSHOT</version>

	<properties>
		<maven.compiler.release>17</maven.compiler.release>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.target>${maven.compiler.release}</maven.compiler.target>
        <junit.jupiter.version>5.9.1</junit.jupiter.version>
	</properties>
	
	<dependencies>
		<dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.jupiter.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
		
	<build>
		<pluginManagement>
			<plugins>
				<plugin>

					<groupId>org.apache.maven.plugins</groupId>

					<artifactId>maven-compiler-plugin</artifactId>

					<version>3.8.1</version>

				</plugin>

			</plugins>
		</pluginManagement>
	</build>

</project>